# Open_CFD

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
OpenCFD/: CMakeLists.txt  OpenCFD.cpp  OpenCFD.h
